<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensehub_bringup</name>
  <version>0.0.0</version>
  <description>Collection of launch scripts for the stages of data collection and processing for S.W.A.M.P</description>
  <maintainer email="herschenglime@gmail.com">Herschenglime</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>

  <exec_depend>unilidar_sdk_ros2</exec_depend>
  <exec_depend>point_lio_ros2</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>isaac_ros_nvblox</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
